整理字符串 String.java